--- a/css/styles.css
+++ b/css/styles.css
@@ -243,6 +243,9 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 p + table, svg + p {margin-top:50px;}
+
+table {margin: 50px auto;}
+
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
