--- a/css/style.production.css
+++ b/css/style.production.css
@@ -60,7 +60,7 @@ header {
   width: 100%;
   padding: 20px;
   background-color: #eeeeee;
-  border:1px solid #7b5acc; /*DEBUG*/
+  /*border:1px solid #7b5acc; DEBUG*/
 }
 
 .header__item {
@@ -77,7 +77,7 @@ header {
 }
 
 #logo {
-  border:1px solid #7b5acc; /*DEBUG*/
+  /*border:1px solid #7b5acc; DEBUG*/
 }
 
 #logo img {
@@ -90,7 +90,7 @@ nav {
   float: right;
   font-size: 1.05em;
   font-weight: 700;
-  border:1px solid #7b5acc; /*DEBUG*/
+  /*border:1px solid #7b5acc; DEBUG*/
 }
 
 nav a {
@@ -179,7 +179,7 @@ nav ul:after {
   clear: both;
   margin: 10px;
   padding: 25px 15px;
-  border:1px solid #7b5acc; /*DEBUG*/
+  /*border:1px solid #7b5acc; DEBUG*/
 }
 
 footer {
@@ -195,7 +195,7 @@ footer {
   padding: 20px;
   background-color: #eeeeee;
   text-align: center;
-  border:1px solid #7b5acc; /*DEBUG*/
+  /*border:1px solid #7b5acc; DEBUG*/
 }
 
 .footer__icons a:nth-of-type(1),
@@ -206,7 +206,7 @@ footer {
 .profile {
   max-width: 700px;
   margin: 0 auto;
-  border:1px solid #7b5acc; /*DEBUG*/
+  /*border:1px solid #7b5acc; DEBUG*/
 }
 
 .profile__portrait {
@@ -221,7 +221,7 @@ footer {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  border:1px solid #7b5acc; /*DEBUG*/
+  /*border:1px solid #7b5acc; DEBUG*/
 }
 
 @media screen and (max-width: 750px) {
@@ -234,7 +234,7 @@ footer {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
-  border:1px solid #7b5acc; /*DEBUG*/
+  /*border:1px solid #7b5acc; DEBUG*/
 }
 
 .grid-work {
