--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ nav ul:after {
 
 #main-content {
   clear: both;
-  margin: 10px;
+  margin: 10px 10px 50px;
   padding: 25px 15px;
   /*border:1px solid var(--debug-border); DEBUG*/
 }
